tolk-tester/tests/invalid-semantics/err-4083.tolk
fun cantCallMutatingFunctionWithAssignmentLValue() {
    var t: tuple = createEmptyTuple();
    (t = createEmptyTuple()).tuplePush(1);
}

/**
@compilation_should_fail
@stderr assignment can not be used as lvalue
 */
